# F1Plotter

./: .gitignore  LICENSE  README.md  install.bat  pyproject.toml
src/f1plotter/: APIrequests.py  dataformatter.py  driver_compare.py  helper_methods.py  plotter.py  query.py
tests/: test_driver_compare.py  test_requests.py
