[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "f1plotter"
version = "0.0.1"

description = "A Python package to create plots for Formula One races, using Matplotlib and Ergast MRD"
readme = "README.md"
requires-python = ">=3.8.5"

dependencies = ["requests-cache>=0.9.6", "matplotlib>=3.4.1"]

classifiers = ["Programming Language :: Python :: 3"]

[project.urls]
"Homepage" = "https://github.com/rebruno/F1Plotter"
"Bug Tracker" = "https://github.com/rebruno/F1Plotter/issues"